
add_executable(test01 test01.cpp)
add_executable(test02 test02.cpp)
add_executable(test03 test03.cpp)

add_executable(test_yh test_yh.cpp)

add_executable(linked_list_01 linked_list_01.cpp)
add_executable(queue_01 queue_01.cpp)
add_executable(binary_tree_01 binary_tree_01.cpp)

add_executable(permutation_combination permutation_combination.cpp)
add_executable(smallest_bounding_rectangle smallest_bounding_rectangle.cpp)