
add_executable(test01 test01.cpp)
add_executable(test02 test02.cpp)
add_executable(test03 test03.cpp)
add_executable(test04 test04.cpp)

add_executable(test_yh test_yh.cpp)

add_executable(linked_list_01 ../src/linked_list_01.cc)
add_executable(binary_tree_01 ../src/binary_tree_01.cc)

add_executable(permutation_combination permutation_combination.cpp)
add_executable(smallest_bounding_rectangle smallest_bounding_rectangle.cpp)
